--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,23 @@
+/* Google fonts import */
+@import url('https://fonts.googleapis.com/css2?family=Chivo+Mono:ital,wght@0,200;0,300;0,400;0,500;0,600;1,200;1,300;1,400;1,500&display=swap');
+
+
 /* removing default spaces */
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+/* root */
+:root{
+    --primaryColor:black;
+    --secondaryColor:white;
+    --alternativeColor:gray;
+    --boderColor:#0f386f;
+    font-family: 'Chivo Mono', monospace;
+}
+
+/* logo */
+#logo {
+    width:5rem;
 }
